# thalesmg.github.io

./: about.html  archive.html  flake.nix  index.html  readme.org  tags.html
css/: alectryon.css  code.css  default.css  gist.css  pygments.css
posts/: 2021-04-18-meal-allowance-optimal-usage-sbv.html  (+5 more)
site/: .gitignore  about.html.pm  about.md  alectryon.rkt  archive.html.pm  contact.markdown  home.html.pm  index.html.pm  index.ptree  pandoc-pollen-template.pm  pollen.lua  pollen.rkt  pygmento.py  site.cabal  site.hs  template.html.p
site/css/: code.css  default.css  gist.css  pygments.css
site/images/elixir-delimited-continuations/: make.sh  stack1.dot  stack2.dot
site/posts/: 2015-11-28-carpe-diem.markdown  2015-12-07-tu-quoque.markdown  2021-04-18-meal-allowance-optimal-usage-sbv.md  2021-04-18-meal-allowance-optimal-usage-sbv.poly.pm  2021-04-18-meal-allowance-optimal-usage-sbv2.poly.pm  2021-08-20-elixir-delimited-continuations-poc.org  2021-08-20-elixir-delimited-continuations.org  2021-08-27-elixir-delimited-continuations.org  2021-08-27-elixir-delimited-continuations.poly.pm  2021-09-09-wolf-goat-cabbage-coq.md  2021-09-09-wolf-goat-cabbage-coq.poly.pm  2021-10-09-using-callcc-to-abort-an-infinite-loop.md  2021-10-09-using-callcc-to-abort-an-infinite-loop.poly.pm  2022-08-15-parallel-stateful-property-testing-example.org  2022-08-15-parallel-stateful-property-testing-example.poly.pm  2022-09-21-simple-two-phase-commit-exercise-in-alloy.rst
site/templates/: archive.html  default.html  post-list.html  post.html  tag-line.html  tags.html
tags/: alloy.html  (+14 more)
(+17 files in other folders)
