name:               site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.14.*
                  , hakyll-alectryon
                  , bytestring
                  , blaze-html
                  , pandoc
                  , pandoc-types
                  , text
                  , process
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
